<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.dashkasystems.testapp1.MainActivity"
    android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_category_caption"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textColor="#2ba02f"
            android:layout_marginBottom="20dp" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/natureBtn"
                    android:text="@string/nature_btn_title"
                    android:singleLine="false"
                    android:layout_weight="1"
                    android:background="#8252b4b5"
                    android:textSize="18sp"
                    android:textColor="@color/abc_primary_text_material_dark"
                    android:onClick="onClick"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/house_btn_title"
                    android:id="@+id/houseBtn"
                    android:layout_weight="1"
                    android:onClick="onClick"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/family_btn_title"
                    android:id="@+id/familyBtn"
                    android:layout_weight="1"
                    android:onClick="onClick"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/transport_btn_title"
                    android:id="@+id/transportBtn"
                    android:layout_weight="1"
                    android:onClick="onClick"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/toy_btn_title"
                    android:id="@+id/toyBtn"
                    android:layout_weight="1"
                    android:onClick="onClick"/>
        </LinearLayout>
</LinearLayout>
